--- a/hobbies.html
+++ b/hobbies.html
@@ -8,70 +8,61 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel ="icon" href ="star1.png">
     <link rel ="stylesheet" href ="style1.css">
-    <style>
-            @media (min-width: 800px) {
-                body {
-                    background-color:green;
-                }
-            }
-
-            @media (max-width: 799px) {
-                body {
-                    background-color: blue;
-                }
-            }
-        </style>
+    
     </head>
-    <body>
-        <header>
-          <nav class="navbar navbar-expand-lg navbar-light bg-info">
-  <a class="navbar-brand" href="#">Avi_blog</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+    <body class ="border">
+        <header style = "width:100%;" class ="border">
+          <nav class="navbar navbar-expand-lg navbar-light bg-info" >
+    <a class="navbar-brand" href="index.html">Avi_blog</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="aboutme.html">About Me</a>
-      </li>
-      <li class = "nav-item">
-        <a class ="nav-link" href = "hobbies.html">My hobbies</a>
-      </li>
-    </ul>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="aboutme.html">About Me</a>
+        </li>
+        <li class = "nav-item">
+          <a class ="nav-link" href = "hobbies.html">My hobbies</a>
+        </li>
+        <li class = "nav-item">
+          <a class ="nav-link" href = "links.html">Useful Links</a>
+        </li>
+      </ul>
 
 
-  </div>
-</nav>
-        </header>
+    </div>
+  </nav>
+          </header>
 
-  <div class = "container-fluid">
-              <h3>My Hobbies </h3>
-        <table>
-          <tr>
-            <th>Coding</th>
-            <th>Reading Books</th>
-            <th>Watching movies </th>
-          </tr>
-          <tr>
-            <td>Python</td>
-            <td>Rich Dad poor dad</td>
-            <td>Inception</td>
-          </tr>
-          <tr>
-            <td>C</td>
-            <td>The Richest man in babylon </td>
-            <td>Source Code </td>
-          </tr>
-          <tr>
-            <td> Html,css </td>
-            <td>Think and Grow Rich </td>
-            <td>The Social Network </td>
-          </tr>
-        </table>
+    <div class = "container-fluid">
+                <h3>My Hobbies </h3>
+          <table>
+            <tr class = "head">
+              <th>Coding</th>
+              <th>Reading Books</th>
+              <th>Watching movies </th>
+            </tr>
+            <tr>
+              <td>Python</td>
+              <td>Rich Dad poor dad</td>
+              <td>Inception</td>
+            </tr>
+            <tr>
+              <td>C</td>
+              <td>The Richest man in babylon </td>
+              <td>Source Code </td>
+            </tr>
+            <tr>
+              <td> Html,css </td>
+              <td>Think and Grow Rich </td>
+              <td>The Social Network </td>
+            </tr>
+          </table>
 
 
 
