--- a/aboutme.html
+++ b/aboutme.html
@@ -39,9 +39,7 @@
         <div class = "container">
             
           <div class = "aboutme border bg-light" style = "padding:10px;">
-            <p> I am a student studying computer engineering in IOE,Pulchowk Campus in Nepal.
-              I am taking CS50W so that my web skills will be sharpened and I get to learn new things.
-		          <strong>I feel really blessed to have the opportunity to be enrolled into this course.Thank you so much CS50 TEAM from Nepal.</strong>
+            <p> I am a student studying computer engineering in IOE,Pulchowk Campus in Nepal. I am fascinated by technology and I am glad to be a part of this great field.
 		</p>
 		<p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
